Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.

VERSION 2.2
  CHANGES:
    * More collection scanning speedups.

  BUGFIXES:
    * Fix photos applet not working after resuming playback. (BR 206829)
    * Fix regression where the genre field in the Tag Dialog would show the
      composer of the track. (BR 208255)
    * Don't reshuffle the playlist every time the active track changes when
    * using a random sort order.
    * Fix the Various Artist node sometimes being shown in the Collection
      Browser with nothing underneath it (or an empty "Unknown" album).
    * Fix some tracks' tags not being saved correctly to the database.
      (BR 202021)

VERSION 2.2-rc1
  FEATURES:
    * Import itpc:// podcast urls (BR 206615).
    * Mark podcast episode as not-new when starting to play it.
    * Reintroduced indicator icons for new podcast episodes.
    * Added "subscribe" command line switch to add a podcast channel.

  CHANGES:
    * Removed Shoutcast Directory service due to technical and other issues.
    * Made audio CDs respect the "Automatically retrieve cover art" setting.
    * TagLib 1.6 built with ASF and MP4 support is now required. This release
      of TagLib fixes many, many bugs and contains new format support.
    * TagLib-Extras 1.0.0 is now required. This release is compatible with the
      new TagLib 1.6 release.
    * Removed non working menu entry "rename" from the Bookmark Manager. This
      functionality is no longer needed as inline renaming is possible.
    * Improvements for volume widget in ToolbarNG.
    * Added "Lock layout" option to the main window's context menu.    

  BUGFIXES:
    * Fix wikipedia engine refined search broken. (BR 208024)
    * Crash in QTextCodec while scanning collection has been fixed.
      Apparently. (BR 191447)
    * A dialog with "Can not write playlist (/)" was displayed when using
      saving from within a script. (BR 206659)